--- a/ZaProject.vcxproj
+++ b/ZaProject.vcxproj
@@ -129,6 +129,14 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="FileHandler.h" />
+    <ClInclude Include="FinancialRecordManager.h" />
+    <ClInclude Include="MedicineManager.h" />
+    <ClInclude Include="Menu.h" />
+    <ClInclude Include="PatientRecordManager.h" />
+    <ClInclude Include="TreatmentManager.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
